<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".activities.DetailActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/item_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/item_name_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/detail_name_tools"
                        android:textSize="@dimen/detail_primary_text"
                        android:textStyle="bold"
                        android:textColor="@color/primary_text"/>

                    <TextView
                        android:id="@+id/item_address_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/detail_address_tools"
                        android:textSize="@dimen/detail_secondary_text"
                        android:textColor="@color/secondary_text"/>

                    <TextView
                        android:id="@+id/item_phone_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/detail_phone_tools"
                        android:textSize="@dimen/detail_secondary_text"
                        android:textColor="@color/secondary_text"/>

                    <TextView
                        android:id="@+id/item_category_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/detail_category_tools"
                        android:textSize="@dimen/detail_secondary_text"
                        android:textStyle="bold"
                        android:textColor="@color/primary_text"/>

                </LinearLayout>

                <ImageView
                    android:id="@+id/item_logo_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    tools:src="@mipmap/ic_launcher"/>
            </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/item_info_company"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/detail_info_text"
            android:textSize="@dimen/detail_primary_text"
            android:textStyle="bold"
            android:textColor="@color/primary_text"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:id="@+id/info_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            tools:text="@string/detail_info_tools"
            android:textSize="@dimen/detail_secondary_text"
            android:textColor="@color/secondary_text"
            android:layout_below="@id/item_company"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_website_detail"
            android:onClick="visitWebsite"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email_detail"
            android:onClick="sendEmail"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_sms_detail"
            android:onClick="sendSMS"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share_detail"
            android:onClick="shareContent"/>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_call_detail"
            android:onClick="callTo"/>

    </LinearLayout>
</RelativeLayout>